argocd_deployment/deployment_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
  labels:
    app: python-app
spec:
  replicas: 1 # Pod sayısını ihtiyacınıza göre ayarlayın
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app-container
          image: mekar43/tekton-python:latest # Docker Hub üzerindeki imaj adı
          imagePullPolicy: Always
          ports:
            - containerPort: 5000 # Dockerfile'da belirtilen EXPOSE portu
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
